# supplier_order_core

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2075aff43ed8_add_suppliers_products_supplier_.py  69148dfc33ea_add_stock_column_to_products.py  a48d2b6c7351_add_buy_orders_and_buy_order_items_.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  orders.py  products.py  suppliers.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  buy_order.py  buy_order_item.py  product.py  supplier.py  supplier_product.py
app/repositories/: buy_order.py  buy_order_item.py  product.py  supplier.py  supplier_product.py
app/schemas/: buy_order.py  common.py  product.py  supplier.py  supplier_product.py
app/services/: buy_order.py  product.py  supplier.py
tests/: conftest.py
tests/api/v1/: test_health.py  test_orders.py  test_products.py  test_suppliers.py
